Bug 1632696 - Fix updating of WebGPU canvas image descriptor r=aosmond

I believe the image descriptor was stale, since the code that updated it
was only doing this in case of a new image key. So if there was a new scene with the same image key
but different image descriptor, we'd not be updating it properly.

Differential Revision: https://phabricator.services.mozilla.com/D72404